--- a/pom.xml
+++ b/pom.xml
@@ -70,9 +70,9 @@
 
     <distributionManagement>
         <repository>
-            <id>cardforge-repo</id>
-            <name>Forge Releases</name>
-            <url>ftp://ftp.cardforge.org/maven/releases/</url>
+            <id>github</id>
+            <name>GitHub Forge Apache Maven Packages</name>
+            <url>https://maven.pkg.github.com/Card-Forge/forge</url>
         </repository>
         <snapshotRepository>
             <id>cardforge-snapshot-repo</id>
